# MetSim

./: .gitattributes  .travis.yml  .zenodo.json  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  diff.log.txt  environment.yml  mkdocs.yml  ms  readthedocs.yml  setup.cfg  setup.py  versioneer.py  wrap_metsim_over_time.py
ci/: requirements-3.5.yml  requirements-3.6.yml
docs/: .index.rst.swp  Makefile  api.rst  conf.py  configuration.rst  configuration_ini.rst  data.rst  examples.rst  faq.rst  index.md  index.rst  installing.rst  release-proceedure.rst  whats-new.rst  why-metsim.rst
examples/: domain_sub.nc  example.conf  example_ascii.conf  example_bin.conf  example_constant_vars_ascii.conf  example_constant_vars_bin.conf  example_constant_vars_nc.conf  example_dimtest.conf  example_nc.conf  example_nc_wrap_metsim_over_time.conf  example_yaml.yaml
metsim/: __init__.py  _version.py  configuration.py  constants.py  datetime.py  defaults.py  disaggregate.py  forcing.py  io.py  methods.py  metsim.py  options.py  physics.py  units.py  utils.py
metsim/cli/: ms.py
metsim/data/: dim_test.nc  domain.nc  passthrough.nc  state_vic.nc  stehekin.nc  test.nc  tiny_domain.nc
metsim/methods/: mtclim.py  passthrough.py
metsim/tests/: test_metsim.py
paper/: paper.bib  paper.md
results/: state.nc
scripts/: log.wrap_metsim.33_34n.-110_-109e.txt  ms  wrap_metsim_over_time.py
tests/: test_metsim.py
tests/data/: daily_data_vic  domain.nc  hourly_data_vic  state_nc.nc  state_vic.nc  three_hourly_48.3125_-120.5625  validated_48.3125_-120.5625
(+47 files in other folders)
