[metadata]
description-file = README.md

[wheel]
universal = 1

[tool:pytest]
python_files=test_*.py
testpaths=metsim/tests

[flake8]
max-line-length=79
ignore=
exclude=
  doc/

[isort]
default_section=THIRDPARTY
known_first_party=metsim
multi_line_output=4

[versioneer]
VCS = git
style = pep440
versionfile_source = metsim/_version.py
versionfile_build = metsim/_version.py
tag_prefix =
parentdir_prefix = metsim-

[aliases]
test = pytest
